force-app/main/default/objects/Contact/fields/Access_Status__c.field-meta.xml
<CustomField>
    <fullName>Access_Status__c</fullName>
    <label>Access Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not requested</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Granted to training</fullName>
            </value>
            <value>
                <fullName>Initial login successful</fullName>
            </value>
            <value>
                <fullName>Granted to production</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>System Disabled</fullName>
            </value>
            <value>
                <fullName>Account Created, QC pending</fullName>
            </value>
            <value>
                <fullName>Account Creation Requested</fullName>
            </value>
            <value>
                <fullName>Account Deactivated by C3i</fullName>
            </value>
            <value>
                <fullName>Account Deactivation Requested</fullName>
            </value>
            <value>
                <fullName>Credentials Sent</fullName>
            </value>
            <value>
                <fullName>Invited to eLearning</fullName>
            </value>
            <value>
                <fullName>On Hold per sponsor</fullName>
            </value>
            <value>
                <fullName>Successful Completion of eLearning</fullName>
            </value>
            <value>
                <fullName>eLearning Invitation Requested</fullName>
            </value>
            <value>
                <fullName>Consent to F/U</fullName>
            </value>
            <value>
                <fullName>No Follow up Required</fullName>
            </value>
            <value>
                <fullName>Declined Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>