force-app/main/default/objects/Contact/fields/C3i_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>C3i_Start_Date__c</fullName>
    <label>C3i Start Date</label>
    <type>DateTime</type>
</CustomField>