force-app/main/default/objects/Contact/fields/Contact_Location__c.field-meta.xml
<CustomField>
    <fullName>Contact_Location__c</fullName>
    <label>Contact Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other Content Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>