force-app/main/default/objects/Contact/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Web - Announcements</fullName>
            </value>
            <value>
                <fullName>Web - Intentions</fullName>
            </value>
            <value>
                <fullName>Web - Life Events</fullName>
            </value>
            <value>
                <fullName>Contact Call</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Wireless Message</fullName>
            </value>
            <value>
                <fullName>Web - Outbound</fullName>
            </value>
            <value>
                <fullName>Phone - Outbound</fullName>
            </value>
            <value>
                <fullName>Web - Inbound</fullName>
            </value>
            <value>
                <fullName>Phone - Inbound</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>Channel Sales</fullName>
            </value>
            <value>
                <fullName>Media: Billboard</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Media: Print Ad</fullName>
            </value>
            <value>
                <fullName>Media: Press Release</fullName>
            </value>
            <value>
                <fullName>Media: Radio</fullName>
            </value>
            <value>
                <fullName>Media: TV</fullName>
            </value>
            <value>
                <fullName>Media: Seminar</fullName>
            </value>
            <value>
                <fullName>Media: Trade Show</fullName>
            </value>
            <value>
                <fullName>Sales Visit</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Pager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>