force-app/main/default/objects/Contact/fields/Contact_Note__c.field-meta.xml
<CustomField>
    <fullName>Contact_Note__c</fullName>
    <label>Contact Note</label>
    <length>100</length>
    <type>Text</type>
</CustomField>