force-app/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>BUDGET/GRANT CONTACT</fullName>
            </value>
            <value>
                <fullName>Business Administrator</fullName>
            </value>
            <value>
                <fullName>CLINICAL PROJECT MANAGER(PCO)</fullName>
            </value>
            <value>
                <fullName>CLINICAL PROTOCOL MANAGER</fullName>
            </value>
            <value>
                <fullName>CO-ORDINATOR</fullName>
            </value>
            <value>
                <fullName>CRF SHIPMENT CONTACT</fullName>
            </value>
            <value>
                <fullName>CTA/PA</fullName>
            </value>
            <value>
                <fullName>DATA CO-ORDINATION CONTACT</fullName>
            </value>
            <value>
                <fullName>DRUG SHIPMENT CONTACT</fullName>
            </value>
            <value>
                <fullName>ETHICS COMMITTEE CHAIRPERSON</fullName>
            </value>
            <value>
                <fullName>GRAABS User</fullName>
            </value>
            <value>
                <fullName>IRB CONTACT</fullName>
            </value>
            <value>
                <fullName>IT CONTACT</fullName>
            </value>
            <value>
                <fullName>LAB SUPPLY CONTACT</fullName>
            </value>
            <value>
                <fullName>LEAD CLINICIAN</fullName>
            </value>
            <value>
                <fullName>LEAD DATA MANAGER</fullName>
            </value>
            <value>
                <fullName>LEGAL CONTACT</fullName>
            </value>
            <value>
                <fullName>MONITOR</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PHARMACY CONTACT</fullName>
            </value>
            <value>
                <fullName>PRINCIPAL INVESTIGATOR</fullName>
            </value>
            <value>
                <fullName>PROGRAM DATA MANAGER</fullName>
            </value>
            <value>
                <fullName>PROJECT ASSISTANT</fullName>
            </value>
            <value>
                <fullName>REGULATORY CONTACT</fullName>
            </value>
            <value>
                <fullName>REGULATORYDOCUMENTCO-ORDINATOR</fullName>
            </value>
            <value>
                <fullName>Rand Administrator</fullName>
            </value>
            <value>
                <fullName>SIRIUS Contact</fullName>
            </value>
            <value>
                <fullName>STUDY MANAGER</fullName>
            </value>
            <value>
                <fullName>STUDY NURSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>