force-app/main/default/objects/Contact/fields/Contact_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Time_Zone__c</fullName>
    <label>Contact Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GMT+14:00 Line Islands Time (Pacific/Kiritimati)</fullName>
            </value>
            <value>
                <fullName>GMT+13:00 Apia Standard Time (Pacific/Apia)</fullName>
            </value>
            <value>
                <fullName>GMT+13:00 Phoenix Islands Time (Pacific/Enderbury)</fullName>
            </value>
            <value>
                <fullName>GMT+13:00 Tokelau Time (Pacific/Fakaofo)</fullName>
            </value>
            <value>
                <fullName>GMT+13:00 Tonga Standard Time (Pacific/Tongatapu)</fullName>
            </value>
            <value>
                <fullName>GMT+12:45 Chatham Standard Time (Pacific/Chatham)</fullName>
            </value>
            <value>
                <fullName>GMT+13:45 Chatham Daylight Time (Pacific/Chatham)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 New Zealand Standard Time (Antarctica/McMurdo)</fullName>
            </value>
            <value>
                <fullName>GMT+13:00 New Zealand Daylight Time (Antarctica/McMurdo)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 Anadyr Standard Time (Asia/Anadyr)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 Petropavlovsk-Kamchatski Standard Time (Asia/Kamchatka)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 New Zealand Standard Time (Pacific/Auckland)</fullName>
            </value>
            <value>
                <fullName>GMT+13:00 New Zealand Daylight Time (Pacific/Auckland)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 Fiji Standard Time (Pacific/Fiji)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 Tuvalu Time (Pacific/Funafuti)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 Marshall Islands Time (Pacific/Kwajalein)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 Marshall Islands Time (Pacific/Majuro)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 Nauru Time (Pacific/Nauru)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 Gilbert Islands Time (Pacific/Tarawa)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 Wake Island Time (Pacific/Wake)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 Wallis &amp; Futuna Time (Pacific/Wallis)</fullName>
            </value>
            <value>
                <fullName>GMT+11:00 Magadan Standard Time (Asia/Magadan)</fullName>
            </value>
            <value>
                <fullName>GMT+11:00 Sakhalin Standard Time (Asia/Sakhalin)</fullName>
            </value>
            <value>
                <fullName>GMT+11:00 Magadan Standard Time (Asia/Srednekolymsk)</fullName>
            </value>
            <value>
                <fullName>GMT+11:00 Bougainville Standard Time (Pacific/Bougainville)</fullName>
            </value>
            <value>
                <fullName>GMT+11:00 Vanuatu Standard Time (Pacific/Efate)</fullName>
            </value>
            <value>
                <fullName>GMT+11:00 Solomon Islands Time (Pacific/Guadalcanal)</fullName>
            </value>
            <value>
                <fullName>GMT+11:00 Kosrae Time (Pacific/Kosrae)</fullName>
            </value>
            <value>
                <fullName>GMT+11:00 Norfolk Island Standard Time (Pacific/Norfolk)</fullName>
            </value>
            <value>
                <fullName>GMT+12:00 Norfolk Island Daylight Time (Pacific/Norfolk)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>