force-app/main/default/objects/Contact/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AK/WA/OR/ID</fullName>
            </value>
            <value>
                <fullName>AL, MS, TN</fullName>
            </value>
            <value>
                <fullName>AZ, NM, CA (San Diego)</fullName>
            </value>
            <value>
                <fullName>AZ, NM, West TX</fullName>
            </value>
            <value>
                <fullName>A_N/A</fullName>
            </value>
            <value>
                <fullName>Abilene, TX</fullName>
            </value>
            <value>
                <fullName>Albany</fullName>
            </value>
            <value>
                <fullName>Albany, NY</fullName>
            </value>
            <value>
                <fullName>Albuquerque, NM</fullName>
            </value>
            <value>
                <fullName>Alexandria, LA</fullName>
            </value>
            <value>
                <fullName>Ann Arbor</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Atlanta E, GA</fullName>
            </value>
            <value>
                <fullName>Atlanta W, GA</fullName>
            </value>
            <value>
                <fullName>Austin, TX</fullName>
            </value>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
            <value>
                <fullName>Bakersfield, CA</fullName>
            </value>
            <value>
                <fullName>Baltimore</fullName>
            </value>
            <value>
                <fullName>Baltimore, MD</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Birmingham, AL</fullName>
            </value>
            <value>
                <fullName>Bismarck, ND</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Boston N, MA</fullName>
            </value>
            <value>
                <fullName>Boston S, MA</fullName>
            </value>
            <value>
                <fullName>Brooklyn, NY</fullName>
            </value>
            <value>
                <fullName>Buffalo</fullName>
            </value>
            <value>
                <fullName>Buffalo, NY</fullName>
            </value>
            <value>
                <fullName>CA- Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>