force-app/main/default/objects/Contact/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>