force-app/main/default/objects/Contact/fields/Employee_Flag__c.field-meta.xml
<CustomField>
    <fullName>Employee_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Flag</label>
    <type>Checkbox</type>
</CustomField>