force-app/main/default/objects/Contact/fields/Field_Force__c.field-meta.xml
<CustomField>
    <fullName>Field_Force__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Force</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Picklist_Value__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Picklist_Value__c.Type__c</field>
            <operation>equals</operation>
            <value>Field Force</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Picklist_Value__c</referenceTo>
    <relationshipLabel>Contacts (Field Force)</relationshipLabel>
    <relationshipName>Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>