force-app/main/default/objects/Contact/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <length>15</length>
    <type>Text</type>
</CustomField>