force-app/main/default/objects/Contact/fields/Last_CSAT_Sent_on__c.field-meta.xml
<CustomField>
    <fullName>Last_CSAT_Sent_on__c</fullName>
    <label>Last CSAT Sent on</label>
    <type>DateTime</type>
</CustomField>