force-app/main/default/objects/Contact/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Picklist_Value__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Picklist_Value__c.Type__c</field>
            <operation>equals</operation>
            <value>Region</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Picklist_Value__c</referenceTo>
    <relationshipLabel>Contacts (Region)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>