force-app/main/default/objects/Contact/fields/Registration_Source__c.field-meta.xml
<CustomField>
    <fullName>Registration_Source__c</fullName>
    <label>Registration Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>