force-app/main/default/objects/Contact/fields/Representative_Type__c.field-meta.xml
<CustomField>
    <fullName>Representative_Type__c</fullName>
    <label>Representative Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>VIP-IT</fullName>
            </value>
            <value>
                <fullName>C3I Employee</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
                <isActive>false</isActive>
                <label>N/a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>