force-app/main/default/objects/Contact/fields/Send_Email_Updates__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Updates</label>
    <type>Checkbox</type>
</CustomField>